--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>7.11.1</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
