Framework Final Version

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
 swaggerBaseURI=https://petstore.swagger.io
-swaggerFindByStatus=https://petstore.swagger.io/v2/pet/findByStatus
-bodyToPost={"id": 0,"category": {"id": 0,"name": "Category"},"name": "ODINSON","photoUrls": ["URL"],"tags": [{"id": 0,"name": "TAG"}],"status": "available"}
+BlazeMeterBaseURI=https://www.demoblaze.com/index.html
+Categories=["Phones", "Laptops", "Monitors"]
